--- a/Pipfile
+++ b/Pipfile
@@ -4,6 +4,9 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
+django-allauth = "*"
+django-sslserver = "*"
+google-auth-oauthlib = "*"
 
 [dev-packages]
 
